--- a/demo2/Dockerfile
+++ b/demo2/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:17
-COPY ./demo2.jar /tmp
-WORKDIR /tmp
-ENTRYPOINT [ "java","-jar", "demo2.jar"]
+COPY ./demo2.jar /
+WORKDIR /
+CMD [ "java","-jar", "demo2.jar"]
 
 EXPOSE 8080
